// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StoryContainer> snapshots does allow edits when props.canEdit is true 1`] = `
<div>
  <div
    id="tags"
  >
    Tag(s): 
    hi, farewell
  </div>
  <article
    id="story"
  >
    <div>
      <div
        id="buttonContainer"
      >
        <button
          className="bold"
          onClick={[Function]}
          type="button"
        >
          bold
        </button>
        <button
          className="italic"
          onClick={[Function]}
          type="button"
        >
          italic
        </button>
        <button
          className="underline"
          onClick={[Function]}
          type="button"
        >
          underline
        </button>
        <button
          className="heading"
          onClick={[Function]}
          type="button"
        >
          heading
        </button>
        <button
          className="fontSize"
          onClick={[Function]}
          type="button"
        >
          fontSize
        </button>
        <button
          className="insertOrderedList"
          onClick={[Function]}
          type="button"
        >
          insertOrderedList
        </button>
        <button
          className="insertUnorderedList"
          onClick={[Function]}
          type="button"
        >
          insertUnorderedList
        </button>
        <button
          className="justifyFull"
          onClick={[Function]}
          type="button"
        >
          justifyFull
        </button>
        <button
          className="justifyLeft"
          onClick={[Function]}
          type="button"
        >
          justifyLeft
        </button>
        <button
          className="justifyRight"
          onClick={[Function]}
          type="button"
        >
          justifyRight
        </button>
        <button
          className="justifyCenter"
          onClick={[Function]}
          type="button"
        >
          justifyCenter
        </button>
        <button
          className="strikeThrough"
          onClick={[Function]}
          type="button"
        >
          strikeThrough
        </button>
        <button
          className="subscript"
          onClick={[Function]}
          type="button"
        >
          subscript
        </button>
        <button
          className="superscript"
          onClick={[Function]}
          type="button"
        >
          superscript
        </button>
        <button
          className="insertImage"
          onClick={[Function]}
          type="button"
        >
          insertImage
        </button>
        <button
          className="createLink"
          onClick={[Function]}
          type="button"
        >
          createLink
        </button>
        <button
          className="unlink"
          onClick={[Function]}
          type="button"
        >
          unlink
        </button>
        <button
          className="hideFromPreview"
          onClick={[Function]}
          type="button"
        >
          hideFromPreview
        </button>
        <br />
        <button
          className="editable-submit"
          onClick={[Function]}
          type="button"
        >
          Submit
        </button>
      </div>
      <header
        contentEditable={true}
        dangerouslySetInnerHTML={
          Object {
            "__html": "<h1>Title</h1><h4>Author</h4>",
          }
        }
        onBlur={[Function]}
      />
    </div>
    <div>
      <section
        className="storyContainer"
        contentEditable={true}
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Content</p>",
          }
        }
        onBlur={[Function]}
      />
    </div>
  </article>
  <hr />
  <div
    id="comments"
  >
    <div
      id="comments"
    >
      <article
        className="comment"
      >
        <a
          className="author"
          href="/u/et"
          onClick={[Function]}
        >
          Cristian
        </a>
        <div
          className="content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "snarky comment",
            }
          }
        />
        <button
          className="deleteReply"
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </article>
      <article
        className="comment"
      >
        <a
          className="author"
          href="/u/Glib"
          onClick={[Function]}
        >
          Becky
        </a>
        <div
          className="content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "snarky comment 2",
            }
          }
        />
        <button
          className="deleteReply"
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </article>
      <article
        className="comment"
        id="reply"
      >
        <div
          className="content"
          onBlur={[Function]}
        />
      </article>
    </div>
  </div>
</div>
`;

exports[`<StoryContainer> snapshots does not allow edits when props.canEdit is false 1`] = `
<div>
  <div
    id="tags"
  >
    Tag(s): 
    hi, farewell
  </div>
  <article
    id="story"
  >
    <header
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>Title</h1><h4>Author</h4>",
        }
      }
      onBlur={[Function]}
    />
    <section
      className="storyContainer"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Content</p>",
        }
      }
      onBlur={[Function]}
    />
  </article>
  <hr />
  <div
    id="comments"
  >
    <div
      id="comments"
    >
      <article
        className="comment"
      >
        <a
          className="author"
          href="/u/et"
          onClick={[Function]}
        >
          Cristian
        </a>
        <div
          className="content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "snarky comment",
            }
          }
        />
        <button
          className="deleteReply"
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </article>
      <article
        className="comment"
      >
        <a
          className="author"
          href="/u/Glib"
          onClick={[Function]}
        >
          Becky
        </a>
        <div
          className="content"
          dangerouslySetInnerHTML={
            Object {
              "__html": "snarky comment 2",
            }
          }
        />
        <button
          className="deleteReply"
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </article>
      <article
        className="comment"
        id="reply"
      >
        <div
          className="content"
          onBlur={[Function]}
        />
      </article>
    </div>
  </div>
</div>
`;
